# Bachelor-s

./: .env.example  .gitignore  Propunere_Licenta_EN.md  Propunere_Licenta_RO.md  README.md  SPECIFICATION.md  main_idea.md  pyproject.toml  requirements.txt
docs/: IMPLEMENTATION.md  bibliography_summary.md  colab_hosting.md  key_concepts.md
logsub/: __init__.py  cli.py  config.py  schema.py
logsub/attack/: __init__.py  base.py  ga.py  gcg.py  handwritten.py  pair.py  taxonomy.py
logsub/copilot/: __init__.py  backends.py  copilot.py  parsing.py  prompts.py
logsub/data/: __init__.py  generators.py  inject.py  substrates.py
logsub/defense/: __init__.py  base.py  detector.py  inference_time.py
logsub/eval/: __init__.py  grading.py  harness.py  metrics.py
notebooks/: README.md  _build_notebook.py  _build_server_notebook.py  colab_model_server.ipynb  logsub_colab_full.ipynb  logsub_experiments.ipynb
notebooks/builders/: build_experiments.py  build_full.py  build_server.py
tests/: test_metrics.py  test_pipeline_e2e.py  test_s1_pipeline.py
